--- a/ApiCrudFrontEnd/src/app/components/employee-form/employee-form.component.html
+++ b/ApiCrudFrontEnd/src/app/components/employee-form/employee-form.component.html
@@ -3,7 +3,7 @@
   <form [formGroup]="employeeForm" (ngSubmit)="submit()" #formDit="ngForm">
     <input type="hidden" formControlName="id" />
 
-    <div class="input_box">
+    <div class="input-box">
       <mat-form-field>
         <mat-label for="name">Name:</mat-label>
         <input
@@ -16,7 +16,7 @@
       </mat-form-field>
     </div>
 
-    <div class="input_box">
+    <div class="input-box">
       <mat-form-field>
         <mat-label for="name">Last name:</mat-label>
         <input
@@ -28,7 +28,7 @@
         />
       </mat-form-field>
     </div>
-    <div class="input_box">
+    <div class="input-box">
       <mat-form-field>
         <mat-label for="name">Department</mat-label>
         <mat-select
@@ -46,7 +46,7 @@
         </mat-select>
       </mat-form-field>
     </div>
-    <div class="input_box">
+    <div class="input-box">
       <mat-form-field>
         <mat-label for="name">Shift</mat-label>
         <mat-select
