--- a/ApiCrudFrontEnd/src/app/pages/home/home.component.html
+++ b/ApiCrudFrontEnd/src/app/pages/home/home.component.html
@@ -1,87 +1,80 @@
-<div class="employee-box">
-  <button routerLink="/register">register new employee</button>
-  <div class="input-box">
-    <label for="">Search:</label>
-    <input type="text" placeholder="Enter with the data..." (input)="search($event)" />
+<mat-card>
+  <div class="employee-box">
+    <button routerLink="/register" mat-raised-button color="primary">
+      Register new employee
+    </button>
+    <div class="input-box">
+      <mat-form-field>
+        <mat-label for="">Search:</mat-label>
+        <input
+          matInput
+          type="text"
+          placeholder="Enter with the data..."
+          (input)="search($event)"
+        />
+      </mat-form-field>
+    </div>
   </div>
-  <table mat-table [dataSource]="employee" class="mat-elevation-z8">
 
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-
-    <!-- Position Column -->
+  <table mat-table [dataSource]="employees" class="mat-elevation-z8">
     <ng-container matColumnDef="Active">
-      <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+      <th mat-header-cell *matHeaderCellDef>Situation</th>
+      <td mat-cell *matCellDef="let employees">
+        <div *ngIf="employees.active == true; else inactive">
+          <img
+            src="assets/images/Ativo.png"
+            style="height: 20px; width: 20px"
+            alt=""
+          />
+        </div>
+        <ng-template #inactive>
+          <img
+            src="assets/images/Inativo.png"
+            style="height: 20px; width: 20px"
+            alt=""
+          />
+        </ng-template>
+      </td>
     </ng-container>
 
-    <!-- Name Column -->
     <ng-container matColumnDef="Name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let employees">{{ employees.name }}</td>
     </ng-container>
 
-    <!-- Weight Column -->
     <ng-container matColumnDef="LastName">
-      <th mat-header-cell *matHeaderCellDef> Weight </th>
-      <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+      <th mat-header-cell *matHeaderCellDef>Last name</th>
+      <td mat-cell *matCellDef="let employees">{{ employees.lastName }}</td>
     </ng-container>
 
-    <!-- Symbol Column -->
     <ng-container matColumnDef="Department">
-      <th mat-header-cell *matHeaderCellDef> Symbol </th>
-      <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+      <th mat-header-cell *matHeaderCellDef>Department</th>
+      <td mat-cell *matCellDef="let employees">{{ employees.department }}</td>
     </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="columns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <ng-container matColumnDef="Actions">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let employees">
+        <button
+          routerLink="/edit/{{ employees.id }}"
+          mat-raised-button
+          color="accent"
+        >
+          Edit
+        </button>
+        <button routerLink="/detail/{{ employees.id }}" mat-raised-button>
+          Details
+        </button>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="Delete">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let employees">
+        <button mat-raised-button color="warn" (click)="OpenDialog(employees.id)">
+          Delete
+        </button>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+    <tr mat-row *matRowDef="let row; columns: columnsToDisplay"></tr>
   </table>
-
-<!--
-
-  <table class="table">
-    <thead>
-      <tr>
-        <th></th>
-        <th>Name</th>
-        <th>Last Name</th>
-        <th>Department</th>
-        <th></th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody *ngFor="let employee of employee">
-      <tr>
-        <td>
-          <div *ngIf="employee.active == true;else inactive">
-            <img
-              src="assets/images/Ativo.png"
-              alt="active"
-              style="height: 20px; width: 20px"
-            />
-          </div>
-          <ng-template #inactive>
-            <img
-              src="assets/images/Inativo.png"
-              alt="inactive"
-              style="height: 20px; width: 20px"
-            />
-          </ng-template>
-        </td>
-        <td>{{ employee.name }}</td>
-        <td>{{ employee.lastName }}</td>
-        <td>{{ employee.department }}</td>
-        <td>
-          <button routerLink="/edit/{{employee.id}}">Edit</button>
-        </td>
-        <td>
-          <button routerLink="/detail/{{employee.id}}">Details</button>
-        </td>
-        <td>
-          <button>Delete</button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
--->
-</div>
+</mat-card>
